= Changelog
:link-repository: https://github.com/bitPogo/kmock
:doctype: article
:toc: macro
:toclevels: 1
:toc-title:
:icons: font
:imagesdir: assets/images
:lang: en
ifdef::env-github[]
:warning-caption: :warning:
:caution-caption: :fire:
:important-caption: :exclamation:
:note-caption: :paperclip:
:tip-caption: :bulb:
endif::[]

All important changes of this project must be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions

toc::[]

== link:{link-repository}/releases/latest[Unreleased]

=== Added

* `or` ArgumentConstraint
* `spiesOnly` in the Gradle extension, in order to tell the processor to only create `kspy`, while adding all known mocks
* `vararg` is now supported by Mocks
* `freezeOnDefault` in the Gradle extension, which sets a default freeze value for `kspy` and `kmock`
* `enableNewOverloadingNames` and `useTypePrefixFor` for overloaded names in order to ease them
* `customMethodNames` in order to allow complete custom names for methods

=== Changed

* Generated mocks don't contain runtime logic any longer
* Mutable properties of Proxies now separate froze/unfrozen state more cleaner to improve Runtime

=== Deprecated

* `uselessPrefixes` in the Gradle Extension

=== Removed

* `allowedRecursiveTypes`, since it is no longer needed due to the new spy invocation

=== Fixed

* Method names with nullable or multi-bounded types defined as generic parameter
* Scoped extension are now correctly resolved

=== Security

=== Bumped

* KotlinPoet 1.10.2 -> 1.11.0


== https://github.com/bitPogo/kmock/compare/v0.1.0\...v0.1.1[0.1.1]

=== Fixed

* Warnings for unused expression and unused parameter in MockFactory

=== Bumped

* Gradle 7.2 -> 7.4.1

== https://github.com/bitPogo/kmock/compare/v0.1.0[0.1.0]

Initial release.